Chore: Refactor home, fix: range input android, Add: early contrast detector

--- a/style/main.css
+++ b/style/main.css
@@ -189,20 +189,20 @@ input[type="number"]:hover::-webkit-outer-spin-button {
 	max-width: 1000px;
 }
 
+.l-contained-1000 {
+	max-width: 1000px;
+}
+
 .l-width-25 {
-	width: 25%;
-}
-
-.l-flex-25 {
 	width: 100%;
 }
 
-.l-flex-33 {
-	width: 100%;
+.components {
+	max-width: 1000px;
+	margin: 0 auto;
 }
 
-.l-flexrow-wrap {
-	border: 1px solid #f0f;
+.flexbox .components__list--flex {
 	display: -webkit-box;
 	display: -webkit-flex;
 	display: -ms-flexbox;
@@ -217,76 +217,20 @@ input[type="number"]:hover::-webkit-outer-spin-button {
 	        flex-wrap: wrap;
 }
 
-.l-flex-center-center {
-	display: -webkit-box;
-	display: -webkit-flex;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-align: center;
-	-webkit-align-items: center;
-	    -ms-flex-align: center;
-	        align-items: center;
-	-webkit-box-pack: center;
-	-webkit-justify-content: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
-}
-
-.l-flex {
+.flexbox .components__list--flex .components__list-item {
 	display: -webkit-box;
 	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
 }
 
-.l-flexrow {
-	display: -webkit-box;
-	display: -webkit-flex;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: horizontal;
-	-webkit-box-direction: normal;
-	-webkit-flex-direction: row;
-	    -ms-flex-direction: row;
-	        flex-direction: row;
+.components__list-item {
+	float: left;
+	margin: 0 0 1em 0;
 }
 
-.form-listitem {
-	padding: 0 0.5em;
-}
-
-.l-flex-column {
-	width: 100%;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-webkit-flex-direction: column;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
-	display: -webkit-box;
-	display: -webkit-flex;
-	display: -ms-flexbox;
-	display: flex;
-}
-
-.l-flex-grow-1 {
-	-webkit-box-flex: 1;
-	-webkit-flex: 1 0 auto;
-	    -ms-flex: 1 0 auto;
-	        flex: 1 0 auto;
-}
-
-.t-grey-white .card-link {
-	background: #222;
-	color: #fff;
-}
-
-.t-grey-white .card-link:hover {
-	background: #444;
-}
-
-.t-grey-white .card {
-	background: #fff;
-	color: #222;
+.components__list-item:nth-child(4n+1) {
+	clear: left;
 }
 
 .card {
@@ -294,13 +238,13 @@ input[type="number"]:hover::-webkit-outer-spin-button {
 	padding: 1em;
 }
 
-.card-heading {
+.card__heading {
 	margin: 0 0 1em 0;
 	font-weight: 700;
 	line-height: 1.2;
 }
 
-.card-link {
+.card__link {
 	margin: 1em 0 0 0;
 	border-radius: 5px;
 	display: block;
@@ -311,8 +255,42 @@ input[type="number"]:hover::-webkit-outer-spin-button {
 	        transition: background 300ms ease;
 }
 
-.form-listitem {
-	margin: 0 0 1em 0;
+.flexbox .card--flex {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-webkit-flex-direction: column;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	width: 100%;
+}
+
+.flexbox .card--flex .card__description {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-flex: 1;
+	-webkit-flex: 1;
+	    -ms-flex: 1;
+	        flex: 1;
+}
+
+.t-grey-white .card {
+	background: #fff;
+	color: #222;
+}
+
+.t-grey-white .card__link {
+	background: #222;
+	color: #fff;
+}
+
+.t-grey-white .card__link:hover {
+	background: #444;
 }
 
 body {
@@ -325,10 +303,6 @@ body {
 
 .heading-primary {
 	padding: 0 0 0 0.5em;
-}
-
-.l-contained-1000 {
-	max-width: 1000px;
 }
 
 h1,
@@ -363,18 +337,9 @@ p {
 	margin: 0 0 1em 0;
 }
 
-.form-controls {
-	max-width: 1000px;
-	margin: 0 auto;
-}
-
 @media all and (min-width: 40em) {
 
-.l-flex-25 {
-	width: 50%;
-}
-
-.l-flex-33 {
+.l-width-25 {
 	width: 50%;
 }
 
@@ -382,12 +347,8 @@ p {
 
 @media all and (min-width: 60em) {
 
-.l-flex-25 {
+.l-width-25 {
 	width: 25%;
-}
-
-.l-flex-33 {
-	width: 33.333%;
 }
 
 }
